raw/ARSYAD SETIAWAN MUHAMMAD 6410 245150207111052/2024-11-14-08-30-06.ceg/compilation.txt
NT.java:8: error: incompatible types: double cannot be converted to double[]
        double[]input = input();
                             ^
NT.java:22: error: non-static variable in cannot be referenced from a static context
            input[i] = in.nextDouble();
                       ^
2 errors
Not compiled
